Added abstraction and methods